fix: fixed quote box overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 html, body, #root {
   width: 100%;
   height: 100%;
+  max-height: 100%;
 }
 
 #wrapper {
@@ -16,6 +17,7 @@ html, body, #root {
   width: 100%;
   height: auto;
   min-height: 100%;
+  max-height: 100%;
 }
 
 #quote-box {
@@ -48,12 +50,20 @@ html, body, #root {
   font-size: 1.1rem;
 }
 
-#developer-sign {
-  margin-bottom: 1rem;
-}
-
 a {
   font-style: italic;
   text-decoration: none;
   color: inherit;
+}
+
+@media screen and (max-width: 400px) {
+  
+  #text {
+    font-size: 1rem;
+  }
+
+  #quote-box {
+    max-width: 250px;
+  }
+
 }
